cookie-benchmark/setup/svc-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: my-svc
  namespace: default
  annotations:
    haproxy.org/load-balance: "leastconn"

spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4242
  selector:
    app: model
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: haproxy
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
      - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
